# sandbox

./: .gitmodules
go/spire-client/: .dockerignore  CLAUDE.md  Dockerfile.dev  Makefile  README.md  TODO.md  client.go  client_test.go  go.mod  go.sum  services.go  services_test.go  tls.go  tls_test.go
go/spire-client/scripts/: create-join-token.sh  create-registration-entry.sh  run-integration-tests.sh  start-spire-server.sh  status-spire-server.sh  stop-spire-server.sh
go/spire-client/test/integration/: agent_test.go  bundle_test.go  helper.go
openfga/: .env  .gitignore  PROJECT.md  README.md  docker-compose.yml
openfga/client/: Dockerfile  README.md  client_test.go  go.mod  go.sum  main.go
openfga/openfga-config/: config.yaml
openfga/openfga-model/: README.md  initial-tuples.json  store-model.json
openfga/scripts/: cleanup.sh  complete-setup.sh  generate-certs.sh  start.sh
openfga/spire-config/: oidc-discovery-provider.conf
openfga/spire-config/agent/: agent.conf
openfga/spire-config/server/: init-server.sh  server.conf
rust/: .gitignore
rust/spiffe-client/: Cargo.toml  README.md
rust/spiffe-client/examples/: basic_mtls.rs  workload_api.rs
rust/spiffe-client/interop-tests/: README.md  generate_spiffe_certs.go  run_tests.sh
rust/spiffe-client/interop-tests/go-client/: go.mod  go.sum  main.go
rust/spiffe-client/interop-tests/go-server/: go.mod  main.go
rust/spiffe-client/interop-tests/rust-impl/: Cargo.toml  mtls_client.rs  mtls_server.rs
rust/spiffe-client/src/: error.rs  lib.rs  mtls.rs  spiffe_id.rs  svid.rs  trust_bundle.rs  workload.rs
rust/spire-client/: CLAUDE.md  Cargo.toml  build.rs
rust/spire-client/src/: error.rs  lib.rs  main.rs
rust/spire-client/src/client/: bundle.rs
rust/spire-client/src/tls/: mod.rs
rust/spire-client/src/transport/: mod.rs  spiffe.rs
rust/spire-client/src/types/: spiffe.rs
rust/web_server/: Cargo.toml  Makefile.toml  README.md
rust/web_server/hack/: gen_ec256_keys.py  generate_jwt.py
rust/web_server/src/: jwt.rs  lib.rs  pool.rs
