[package]
name = "spire-client"
version = "0.1.0"
authors = ["Tomoya Usami <usami.tomoya@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.13.1", features = ["tls-ring", "tls-native-roots"] }
tokio = { version = "1.45.1", features = ["full"] }
prost = "0.13"
prost-types = "0.13"

[build-dependencies]
tonic-build = "0.13.1"
glob = "0.3"
