[package]
name = "spire-client"
version = "0.1.0"
authors = ["Tomoya Usami <usami.tomoya@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.13.1", features = ["tls-ring", "tls-native-roots"] }
tokio = { version = "1.45.1", features = ["full"] }
prost = "0.13"
prost-types = "0.13"
rustls = "0.23"
rustls-pemfile = "2.0"
rustls-pki-types = "1.12.0"
rustls-webpki = "0.102"
thiserror = "1.0"
anyhow = "1.0"
x509-parser = "0.16"
der = "0.7"
ring = "0.17"
webpki-roots = "0.26"
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.13.1"
glob = "0.3"
