[package]
name = "web_server"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
jsonwebtoken = "9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
thiserror = "1.0"
rand = "0.8"
chrono = "0.4"
